--- a/style.css
+++ b/style.css
@@ -1,3 +1,129 @@
-*{
+@media (orientation: landscape) {
+	:root {
+	  --side_width: 20vw;
+	}
+}
+@media (orientation: portrait) {
+	:root {
+	  --side_width: 1em;
+	}
+}
+*,.text{
 font-family: "Work Sans", sans-serif;
+transition: 1s;
+}
+.title{
+	font-size: 2em;
+}
+.sub{
+	font-size: 1em;
+}
+#signin{
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	background-color: #738290;
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+#key{
+	width: calc(0.833 * (100vw - (2 * var(--side_width))));
+	background-color: #FFFCF7;
+	border-radius: 15px;
+	position: relative;
+	left: calc(var(--side_width));
+	top: 20vh;
+	height: 10vw;
+	z-index: 1;
+}
+#key2{
+	width: calc(0.833 * 0.3 * (100vw - (2 * var(--side_width))));
+	background-color: #FFFCF7;
+	border-radius: 15px;
+	position: relative;
+	left: calc(var(--side_width) - (0.2 * 0.833 * 0.3 * (100vw - (2 * var(--side_width)))));
+	top: 40vh;
+	height: 3vw;
+	 transform: rotate(180deg);
+}
+.tooth{
+  width: 0;
+  height: 0;
+  border-left: calc(0.025 * 0.833 * (100vw - (2 * var(--side_width)))) solid transparent;
+  border-right: calc(0.025 * 0.833 * (100vw - (2 * var(--side_width)))) solid transparent;
+  border-top: calc(0.05 * 0.833 * (100vw - (2 * var(--side_width)))) solid #FFFCF7; /* Adjust color as needed */
+  position: absolute;
+}
+.toothe{
+  width: 0;
+  height: 0;
+  border-left: calc(0.025  * 0.6 * 0.833 * (100vw - (2 * var(--side_width)))) solid transparent;
+  border-right: calc(0.025  * 0.6 * 0.833 * (100vw - (2 * var(--side_width)))) solid transparent;
+  border-top: calc(0.05  * 0.6 * 0.833 * (100vw - (2 * var(--side_width)))) solid #FFFCF7; /* Adjust color as needed */
+  position: absolute;
+}
+.tooth1{
+	top: 100%;
+	left: 5%;
+}
+.tooth2{
+	top: 100%;
+	left: 37.5%;
+}
+.tooth3{
+	top: 100%;
+	left: 70%;
+}
+.backcircle{
+	left: 80%;
+	height: 200%;
+	width: 40%;
+	top: -50%;
+	background-color: #FFFCF7;
+	border-radius: 50%;
+	position: absolute;
+}
+.innerbackcircle{
+	background-color: #738290;
+	left: 90%;
+	width: 20%;
+	height: 100%;
+	border-radius: 50%;
+	position: absolute;
+}
+#key :is(input), #key2 :is(button){
+	position: absolute;
+	left: 5% !important;  
+	width: 70%;
+	
+	font-size: 0.6em;
+}
+#key :is(input){
+	height: 40%;
+}
+button#k2p{
+	width: 75% !important;
+	height: 80% !important;
+}
+#key2{
+	display: grid;
+	place-items: center;
+}
+.flip{
+	 transform: rotate(180deg);
+}
+button.flip{
+	max-width: 80%;
+	position: absolute;
+	font-size: 1em !important;
+}
+#username{
+	top: calc(20% / 3);
+}
+#password{
+	top: calc(((20% / 3) * 2) + 40%);
+}
+#mainpage{
+	border-radius: 5%;
 }
